--- a/app/views/camps/index.html.erb
+++ b/app/views/camps/index.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Camps</h1>
+<div class ="jumbotron">
+  <h2>DoggieCampKC is the best way to find reviews on local housing and kennel options in the KC area.</h2>
+  <h3>Explore the most favorited doggie camps in your community.
+  <br>Leave reviews and ratings for your fellow dog lovers.</h3>
+</div>
 
 <table class="table table-hover table-condensed">
   <thead>
