--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
 
 <%= render 'layouts/navbar' %>  
 
-<div class="container-fluid"
+<div class="container-fluid">
+  <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
 
 <%= yield %>
 <p>Copyright Matt Curtright</p>
