--- a/app/views/camps/index.html.erb
+++ b/app/views/camps/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= camp.name %></td>
         <td><%= camp.address %></td>
         <td><%= camp.phone %></td>
-        <td><%= camp.website %></td>
+        <td><%= link_to camp.website, camp.website %></td>
         <td><%= link_to 'Show', camp %></td>
         <td><%= link_to 'Edit', edit_camp_path(camp) %></td>
         <td><%= link_to 'Destroy', camp, method: :delete, data: { confirm: 'Are you sure?' } %></td>
